  well with Twitter-bootstrap.
- PHOTOLOGUE_USE_CKEDITOR has been removed; override/extend the admin instead.

List of changes:

- date_taken field not correctly handled during single photo upload (#80).
- The Twitter-Bootstrap templates - previously in 'contrib' become the default; the
  previous templates are moved to 'contrib'.
- PHOTOLOGUE_USE_CKEDITOR has been removed.

2.8 (2014-05-04)
----------------

Upgrade notes:

1. Photologue now depends on django-sortedm2m and django-model-utils - please
   refer to installation instructions. These dependencies should be added 
   automatically.

2. Run South migrations.

List of changes:

- Photo and Gallery models now support Django's sites framework.
- Photologue now uses django-sortedm2m to sort photos in a gallery.
- Major rewrite of zip archive uploader: warn users of files that could not be
  processed, get code to work with Python 3 (issue #71), add extra error
  handling.
- Renamed field title_slug to slug - this allows us to simplify views.py a
  bit.
- PHOTOLOGUE_USE_CKEDITOR, PHOTOLOGUE_GALLERY_PAGINATE_BY and
  PHOTOLOGUE_PHOTO_PAGINATE_BY are deprecated.
- Fixed pagination controls for photo list template.
- Tightened naming rules for Photosize names.
- Fixed a couple of unicode-related bugs.
- Added to the documentation pages describing how to customise the admin and
  the views.
- Refactored slightly views.py.
- Started work on chainable querysets.

2.7 (2013-10-27)
----------------

Upgrade notes:

1. All settings are now prefixed with ``PHOTOLOGUE_``. Please check that you are
   not affected by this.

List of changes:

- Fixed issue #56, Gallery pagination is broken.
- Photologue now works with Python 3.
- Added a set of templates that work well with Twitter-Bootstrap 3, and used
  them for the 'example_project'.
- Fixed issue #64 (allow installation without installing Pillow).
- Optional use of CKEditor.
- Updated/news translations for Polish, Slovak and German.