@@ -24,12 +24,7 @@ There are 2 sitemap classes, as in some case you may want to have gallery pages,
 but no photo detail page (e.g. if all photos are displayed via a javascript
 lightbox).
 
-.. note::
-    
-    There is also a PhotologueSitemap class which combines the above 2 classes,
-    but it will be removed in Photologue 3.0.
 """
-import warnings
 from django.contrib.sitemaps import Sitemap
 from .models import Gallery, Photo
 
@@ -56,21 +51,6 @@ class PhotoSitemap(Sitemap):
         # The following code is very basic and will probably cause problems with
         # large querysets.
         return Photo.objects.filter(is_public=True)
-
-    def lastmod(self, obj):
-            return obj.date_added
-
-
-class PhotologueSitemap(Sitemap):
-    priority = 0.5
-
-    def items(self):
-        warnings.warn(DeprecationWarning('PhotologueSitemap will be replaced in '
-                                         'Photologue 3.0 by GallerySitemap and PhotoSitemap.'))
-        # The following code is very basic and will probably cause problems with
-        # large querysets.
-        return list(Gallery.objects.filter(is_public=True)) \
-            + list(Photo.objects.filter(is_public=True))
 
     def lastmod(self, obj):
             return obj.date_added
